--- a/SchoolSystem/Web.config
+++ b/SchoolSystem/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="connection" connectionString="server=YYYYY\SQLEXPRESS;database=InfoManage;Integrated Security=false;Uid=sa;pwd=1270ph89757;" />
+    <add name="connection" connectionString="server=.;database=InfoManage;Integrated Security=false;Uid=sa;pwd=1270ph89757;" />
   </connectionStrings>
   
   <appSettings>
